<resources>
    <string name="app_name">My Health Reminder</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="edit">Edit</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="delete">Delete</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>

    <string name="snooze_duration">Snooze Duration</string>
    <string name="minutes">Minutes</string>
    <string name="snooze_duration_minutes">Snooze Duration (Minutes)</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="medicine_description">Medicine Description</string>
    <string name="enter_medicine_description">Enter Medicine Description</string>
    <string name="days">Days</string>
    <string name="times">Times</string>
    <string name="time">Time</string>
    <string name="sound">Sound</string>
    <string-array name="typeListing">
        <item>Pill</item>
        <item>Syringe</item>
        <item>Drink</item>
    </string-array>
    <string name="spinner">Select Type</string>
    <string name="pick_time">Pick Time</string>
</resources>