<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/cTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/medicine_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_medicine_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cTitleLabel" />

    <TextView
        android:id="@+id/cDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/medicine_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cTitleInput" />

    <EditText
        android:id="@+id/cDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top|start"
        android:hint="@string/enter_medicine_description"
        android:inputType="text|textMultiLine"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cDescriptionLabel" />

    <!--    <TextView-->
    <!--        android:id="@+id/cTypeLabel"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="Type"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="16sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/cDescriptionInput" />-->

    <!--    <Spinner-->
    <!--        android:id="@+id/cTypeSpinner"-->
    <!--        android:layout_width="393dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:spinnerMode="dialog"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/cTypeLabel" />-->

    <TextView
        android:id="@+id/cDayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/days"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cDescriptionInput" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="260dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cDayLabel" />

    <TextView
        android:id="@+id/cTimesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_filter" />

    <Button
        android:id="@+id/btnRemiderTime"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/primaryLight"
        android:elevation="4dp"
        android:text="@string/pick_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cTimesLabel"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_filter" />

    <Button
        android:id="@+id/cCreateBtn"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/add_reminder"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>